feat(api): add cron event sources and deletion of event sources
